RESOLVED FIXED100835
perspective-origin should ignore values with more then two lengths and use the default values
https://bugs.webkit.org/show_bug.cgi?id=100835
Summary perspective-origin should ignore values with more then two lengths and use th...
Zoltan Nyul
Reported 2012-10-31 02:39:41 PDT
The perspective-origin now uses the first two values if there's more then two given (like -webkit-perspective-origin: 10% 20% 30%;) however transform-origin uses the default values, and also firefox is using the default values for perspective-origin with more than two values. The specification says only that it can have maximum 2 lengths (http://www.w3.org/TR/css3-transforms/#perspective-origin) but i think it makes sense to have the same behavior.
Attachments
patch (4.82 KB, patch)
2012-10-31 04:51 PDT, Zoltan Nyul
no flags
patch (4.90 KB, patch)
2012-10-31 05:06 PDT, Zoltan Nyul
no flags
Zoltan Nyul
Comment 1 2012-10-31 04:51:06 PDT
Kenneth Rohde Christiansen
Comment 2 2012-10-31 04:58:02 PDT
Comment on attachment 171620 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=171620&action=review > Source/WebCore/ChangeLog:14 > + perspective-origin should ignore values with more then two lengths and use the default values > + https://bugs.webkit.org/show_bug.cgi?id=100835 > + > + Reviewed by NOBODY (OOPS!). > + > + Perspective-origin should ignore values with more then two lengths and use the default values > + instead of parsing it as an unlimited-length list, of which all but the first two values are ignored. > + This makes perspective-origin behave similar to transform-origin which uses default value in this case, > + as well as firefox does the same. > + > + Test: transforms/2d/computed-style-origin.html > + link to spec which says this?
Zoltan Nyul
Comment 3 2012-10-31 05:06:45 PDT
WebKit Review Bot
Comment 4 2012-10-31 08:01:51 PDT
Comment on attachment 171622 [details] patch Clearing flags on attachment: 171622 Committed r133029: <http://trac.webkit.org/changeset/133029>
WebKit Review Bot
Comment 5 2012-10-31 08:01:56 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.