perspective-origin should ignore values with more then two lengths and use the default values https://bugs.webkit.org/show_bug.cgi?id=100835

Patch by Zoltan Nyul <zoltan.nyul@intel.com> on 2012-10-31
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

Perspective-origin should ignore values with more then two lengths
(http://www.w3.org/TR/css3-transforms/#perspective-origin) and use
the default values instead of parsing it as an unlimited-length list,
of which all but the first two values are ignored. This makes perspective-origin
behave similar to transform-origin which uses default value in this case,
as well as firefox does the same.

Test: transforms/2d/computed-style-origin.html

* css/CSSParser.cpp:
(WebCore::CSSParser::parsePerspectiveOrigin):

LayoutTests:

Add test for perspective-origin with more the than two lengths.

* transforms/2d/computed-style-origin-expected.txt:
* transforms/2d/computed-style-origin.html:

Canonical link: https://commits.webkit.org/118907@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133029 268f45cc-cd09-0410-ab3c-d52691b4dbfc